# zfs

./: Makefile.am  configure.ac
cmd/: Makefile.am
cmd/zdb/: zdb.c
cmd/zdbm/: .gitignore  Makefile.am  zdbm.c  zdbm_il.c
include/sys/: spa.h
lib/libzpool/: kernel.c
man/man8/: Makefile.am
module/zfs/: bptree.c  gzip.c  spa_misc.c  zio.c  zio_compress.c  zle.c
tests/zfs-tests/tests/functional/cli_root/zdbm/: Makefile.am
